Story1 et connextion BDD